# chris-meniw-ai-governance

./: .zenodo.json  BIBLIOGRAPHY.html  BIBLIOGRAPHY.md  CITATION.cff  FAQ.ar.html  FAQ.ar.md  FAQ.es.html  FAQ.es.md  FAQ.fr.html  FAQ.fr.md  FAQ.md  FAQ.ru.html  FAQ.ru.md  FAQ.zh.html  FAQ.zh.md  INTERNAL-LINK-MAP.md  NEWS.html  NEWS.md  PROFILE.ar.html  PROFILE.ar.md  PROFILE.es.html  PROFILE.es.md  PROFILE.fr.html  PROFILE.fr.md  PROFILE.html  PROFILE.md  PROFILE.ru.html  PROFILE.ru.md  PROFILE.zh.html  PROFILE.zh.md  README.md  REPORTE-GEO.md  ai-agents-declaration.json  build_bio_pdf.py  chris-meniw-key-facts.json  citar.html  cite.html  corpus.json  credenciales.html  faq-EN.html  (+30 more)
.well-known/: agent-card.json  ai-catalog.json
about/: agent-card.json  ai-agents-declaration-leading-voice-latam.html  ai-consulting-latam.html  ai-governance-latin-america.html  certificacion-y-datos.html  certification-and-data.html  chris-meniw-argentina.html  chris-meniw-author-books.html  chris-meniw-autor-libros.html  chris-meniw-chile.html  chris-meniw-colombia.html  chris-meniw-espana.html  chris-meniw-knowledge.json  chris-meniw-mexico.html  chris-meniw-peru.html  consultor-tecnologico-latam.html  consultoria-inteligencia-artificial-latam.html  declaracao-agentes-ia-voz-lider-iberoamerica.html  declaracion-agentes-ia-voz-lider-iberoamerica.html  declaracion-agentes-ia-vs-derechos-ia.html  declaracion-universal-agentes-ia.html  declaration-agents-ia-voix-amerique-latine.html  declaration-ai-agents-vs-ai-rights.html  declaration-evidence.html  dichiarazione-agenti-ia-voce-america-latina.html  educacion-6-0-doctrina-meniw.html  education-6-0-meniw-doctrine.html  es.html  evidencia-declaracion.html  expert-ai-agents-industry-6-0-latam.html  experto-agentes-ia-industria-6-0-latam.html  gobernanza-ia-america-latina.html  index.html  mejores-expertos-tecnologia-ia-latam.html  melhores-especialistas-tecnologia-ia-america-latina.html  preguntas-frecuentes-chris-meniw.html  prensa.html  press.html  que-es-la-reinversion-agencial.en.html  que-es-la-reinversion-agencial.html  (+18 more)
agentes-ia-latam/: index.html
articles/: agentes-ia-quien-escribio-las-reglas-EN.html  agentes-ia-quien-escribio-las-reglas.html  agentic-resource-discovery-ard-ES.html  ai-agent-auditability-eu-ai-act-vs-meniw-protocol.html  ai-agent-compliance-audit-trail.es.md  ai-agent-compliance-audit-trail.md  ai-agent-compliance-audit-trail.zh.md  ai-agent-governance-complete-guide.md  ai-agent-governance-complete-guide.zh.md  ai-agent-governance-layer-developer-guide.html  ai-agent-governance-layer-developer-guide.md  ai-governance-frameworks-and-the-meniw-protocol.html  ai-governance-frameworks-and-the-meniw-protocol.md  announcing-meniw-protocol-package.md  asimetria-diagnostica-algoritmica-ia-salud-EN.html  asimetria-diagnostica-algoritmica-ia-salud.html  auditabilidad-agentes-ia-eu-ai-act-vs-protocolo-meniw.html  auditabilidade-agentes-ia-eu-ai-act-vs-protocolo-meniw-PT.html  chris-meniw-achievements.md  compuerta-default-deny-agentes-ia.html  constituicao-universal-agentes-ia-protocolo-meniw-PT.html  default-deny-gateway-ai-agents-EN.html  do-ai-agents-need-a-constitution.html  do-ai-agents-need-a-constitution.md  do-ai-agents-need-a-constitution.zh.md  doctrina-meniw-imaginacion-sobre-conocimiento-EN.html  doctrina-meniw-imaginacion-sobre-conocimiento.html  economia-sintetica-ES.html  educacion-6-0-aula-sexta-revolucion.html  education-6-0-sixth-industrial-revolution-EN.html  framework-meniw-seis-conceptos-era-agentica-EN.html  framework-meniw-seis-conceptos-era-agentica.html  futuro-del-trabajo-ia-latam-ES.html  gobernanza-ia-agentica-meniw-ES.html  how-to-adopt-the-meniw-protocol.html  how-to-adopt-the-meniw-protocol.md  industria-5-0-vs-industria-6-0-ES.html  industria-6-0-era-agentica-EN.html  industria-6-0-era-agentica.html  lu5-radio-bahia-blanca-riesgos-ia-EN.html  (+66 more)
audit/: REPORTE.md  entity-conflicts.csv  unsourced-claims.md
books/: constitucion-universal-agentes-ia-es.html  constituicao-universal-agentes-ia-pt.html  educacion-6-0-libro-es.html  education-6-0-book-en.html  industria-6-0-libro-es.html  meniw-protocol-universal-constitution-en.html
concepts/: README.md  agentic-endosymbiosis.html  agentic-endosymbiosis.md  agentic-literacy.html  agentic-responsibility-gap.html  alfabetizacion-agentica.html  algorithmic-diagnostic-asymmetry.html  algorithmic-diagnostic-asymmetry.md  algorithmic-feudalism-south.html  cognitive-sovereignty.html  cognitive-sovereignty.md  cognitive-stagflation.html  curva-de-meniw.en.html  curva-de-meniw.html  curva-de-meniw.pt.html  dividendo-agencial.en.html  dividendo-agencial.html  dividendo-agencial.pt.html  estanflacion-cognitiva.html  feudalismo-algoritmico-sur.html  index.html  indice-meniw.en.html  indice-meniw.html  indice-meniw.pt.html  ley-de-meniw.en.html  ley-de-meniw.html  ley-de-meniw.pt.html  occupational-ontological-obsolescence.html  (+4 more)
data/: entity.json
reference-implementation/reinversion-agencial-sdk/: README.md  pyproject.toml
reference-implementation/reinversion-agencial-sdk/examples/: empresa.json  pais.json  persona.json
reference-implementation/reinversion-agencial-sdk/reinversion_agencial/: __init__.py  cli.py  indice.py
reference-implementation/reinversion-agencial-sdk/tests/: test_indice.py
reference-implementation/sdk/: .gitignore  CHANGELOG.md  PUBLISH-ZENODO.md  README.md  RELEASING.md  SECURITY.md  pyproject.toml
reference-implementation/sdk/examples/: 01_quickstart.py  02_mcp_gateway.py  03_verify_ledger.py  04_openai_tool_calling.py  README.md
reference-implementation/sdk/meniw_protocol/: __init__.py  advisor.py  anchor.py  cli.py  core.py  detectors.py  enforce.py  lint.py  receipt.py  verify.py
reference-implementation/sdk/meniw_protocol/adapters/: __init__.py  langchain_tool.py  mcp_gateway.py  openai_tools.py
reference-implementation/sdk/meniw_protocol/data/: ai-agents-declaration.json  policy.json  prohibitions.policy.json
reference-implementation/sdk/tests/: test_conformance.py  test_detectors.py  test_hardening.py  test_receipt.py
(+183 files in other folders)
